# MedCouncil-AI

./: README.md  pyproject.toml
examples/: chest_pain_demo.py
src/: __init__.py  base.py  engine.py  llm.py
src/agents/: __init__.py  cardiologist.py  general_physician.py  neurologist.py
src/aggregators/: __init__.py  clinical_synthesizer.py  conflict_checker.py
tests/: test_agents.py
